views fos surchargé et import des entités de la BD

--- a/app/Resources/FosUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FosUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -1,8 +1,40 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+<br><br>
+<div class="container">
+
+    <div class="registration">
+        <div class="registration_left">
+
+            <div class="registration_form">
+                <!-- Form -->
+                <div class="tab1">
+
+                    <div class="single-bottom">
+                        <a href="{{ path ('fos_user_profile_show')}}"><p>Mes informations</p></a>
+                        <a href="{{ path ('fos_user_profile_edit')}}"><p>Modifier mes information</p></a>
+                        <a href="{{ path ('fos_user_change_password')}}"><p>Modifier mon mot de passe</p></a>
+                        <a href="{{ path ('fos_user_security_logout')}}"><p>Se déconnecter</p></a>
+                    </div>
+                </div>
+                <!-- /Form -->
+            </div>
+        </div>
+        <div class="registration_left">
+            <h2>Modifier mon mot de passe</h2>
+            <div class="registration_form">
+                <!-- Form -->
+                {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
+                {{ form_widget(form) }}
+                <div>
+                    <input type="submit" value="Valider nouveau mot de passe" />
+                </div>
+                {{ form_end(form) }}
+                <!-- /Form -->
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
-{{ form_end(form) }}
+</div>
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
