--- a/app/Resources/views/default/Layout.html.twig
+++ b/app/Resources/views/default/Layout.html.twig
@@ -144,12 +144,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <!---->
             <div class="cart box_1">
-                <a href="checkout.html">
-                    <div class="total">
-                        <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span>)</div>
-                    <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-                </a>
-                <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <p><a href="{{ path ('fos_user_profile_show') }}" class="glyphicon glyphicon-user"> {{ app.user.username }} </a></p>
+                {% else %}
+                    <p><a href="{{ path ('fos_user_security_login') }}" class="glyphicon glyphicon-user">   S'authentifier</a></p>
+                {% endif %}
+
                 <div class="clearfix"> </div>
             </div>
             <div class="clearfix"> </div>
