--- a/app/Resources/views/default/Layout.html.twig
+++ b/app/Resources/views/default/Layout.html.twig
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!---->
             <div class="top-nav">
                 <ul class="memenu skyblue"><li class="active"><a href="index.html">Home</a></li>
-                    <li class="grid"><a href="#">Products</a>
+                    <li class="grid"><a href="#">événements</a>
                         <div class="mepanel">
                             <div class="row">
                                 <div class="col1 me-one">
