--- a/app/Resources/views/default/Layout.html.twig
+++ b/app/Resources/views/default/Layout.html.twig
@@ -47,49 +47,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="header-top">
         <div class="header-bottom">
             <div class="logo">
-                <h1><a href="index.html">Lighting</a></h1>
+                <h1><a href="{{ path('homepage') }}">Lighting</a></h1>
             </div>
             <!---->
             <div class="top-nav">
-                <ul class="memenu skyblue"><li class="active"><a href="index.html">Home</a></li>
-                    <li class="grid"><a href="#">événements</a>
+                <ul class="memenu skyblue"><li class="active"><a href="{{ path('homepage') }}">Home</a></li>
+                    <li class="grid"><a href="{{path('event_homepage')}}" _target="blank">événements</a>
                         <div class="mepanel">
                             <div class="row">
                                 <div class="col1 me-one">
-                                    <h4>Shop</h4>
+                                    <h4>Evénements</h4>
+                                    <ul>
+                                        <li><a href="product.html">liste des événements</a></li>
+                                        <li><a href="product.html">Mes événements</a></li>
+                                        <li><a href="product.html">Mes réservations</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col1 me-one">
+                                    <h4>Activités</h4>
+                                    <ul>
+                                        <li><a href="product.html"></a></li>
+                                        <li><a href="product.html">Home</a></li>
+                                        <li><a href="product.html">Decorates</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col1 me-one">
+                                    <h4>Evénements</h4>
                                     <ul>
                                         <li><a href="product.html">New Arrivals</a></li>
                                         <li><a href="product.html">Home</a></li>
                                         <li><a href="product.html">Decorates</a></li>
-                                        <li><a href="product.html">Accessories</a></li>
-                                        <li><a href="product.html">Kids</a></li>
-                                        <li><a href="product.html">Login</a></li>
-                                        <li><a href="product.html">Brands</a></li>
-                                        <li><a href="product.html">My Shopping Bag</a></li>
-                                    </ul>
-                                </div>
-                                <div class="col1 me-one">
-                                    <h4>Type</h4>
-                                    <ul>
-                                        <li><a href="product.html">Diwali Lights</a></li>
-                                        <li><a href="product.html">Tube Lights</a></li>
-                                        <li><a href="product.html">Bulbs</a></li>
-                                        <li><a href="product.html">Ceiling Lights</a></li>
-                                        <li><a href="product.html">Accessories</a></li>
-                                        <li><a href="product.html">Lanterns</a></li>
-                                    </ul>
-                                </div>
-                                <div class="col1 me-one">
-                                    <h4>Popular Brands</h4>
-                                    <ul>
-                                        <li><a href="product.html">Everyday</a></li>
-                                        <li><a href="product.html">Philips</a></li>
-                                        <li><a href="product.html">Havells</a></li>
-                                        <li><a href="product.html">Wipro</a></li>
-                                        <li><a href="product.html">Jaguar</a></li>
-                                        <li><a href="product.html">Ave</a></li>
-                                        <li><a href="product.html">Gold Medal</a></li>
-                                        <li><a href="product.html">Anchor</a></li>
                                     </ul>
                                 </div>
                             </div>
