--- a/app/Resources/views/default/Layout.html.twig
+++ b/app/Resources/views/default/Layout.html.twig
@@ -58,25 +58,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="col1 me-one">
                                     <h4>Evénements</h4>
                                     <ul>
-                                        <li><a href="product.html">liste des événements</a></li>
-                                        <li><a href="product.html">Mes événements</a></li>
+                                        <li><a href="{{ path('lister_event') }}">liste des événements</a></li>
+                                        <li><a href="{{ path('my_events') }}">Mes événements</a></li>
                                         <li><a href="product.html">Mes réservations</a></li>
                                     </ul>
                                 </div>
                                 <div class="col1 me-one">
                                     <h4>Activités</h4>
                                     <ul>
-                                        <li><a href="product.html"></a></li>
-                                        <li><a href="product.html">Home</a></li>
-                                        <li><a href="product.html">Decorates</a></li>
+                                        <li><a href="{{ path('lister_event') }}">liste des événements</a></li>
+                                        <li><a href="{{ path('my_events') }}">Mes événements</a></li>
+                                        <li><a href="product.html">Mes réservations</a></li>
                                     </ul>
                                 </div>
                                 <div class="col1 me-one">
-                                    <h4>Evénements</h4>
+                                    <h4>Galleries</h4>
                                     <ul>
-                                        <li><a href="product.html">New Arrivals</a></li>
-                                        <li><a href="product.html">Home</a></li>
-                                        <li><a href="product.html">Decorates</a></li>
+                                        <li><a href="{{ path('lister_event') }}">liste des événements</a></li>
+                                        <li><a href="{{ path('my_events') }}">Mes événements</a></li>
+                                        <li><a href="product.html">Mes réservations</a></li>
                                     </ul>
                                 </div>
                             </div>
