--- a/src/EventBundle/Resources/views/Event/events.html.twig
+++ b/src/EventBundle/Resources/views/Event/events.html.twig
@@ -7,7 +7,6 @@
                 <li class="active">Contact</li>
             </ol>
             <!--start contact-->
-            <h3>Contact Us</h3>
             <div class="section group">
                 <div class="col-md-6 span_1_of_3">
                     <section  class="sky-form">
@@ -15,60 +14,62 @@
                             <h4 class="m_2"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span>Categories</h4>
                             <div class="tab1">
                                 <ul class="place">
-                                    <li class="sort">Home Decorates</li>
-                                    <li class="by"><img src="images/do.png" alt=""></li>
+                                    <li class="sort"><img src="{{asset('images/events_home.png')}}" alt=""></li>
+                                    <li class="by">Evénements</li>
                                     <div class="clearfix"> </div>
                                 </ul>
                                 <div class="single-bottom">
-                                    <a href="#"><p>Lanterns</p></a>
-                                    <a href="#"><p>Wall Lamps</p></a>
-                                    <a href="#"><p>Table Lamps</p></a>
-                                    <a href="#"><p>Selling Lamps</p></a>
+                                    <a href="{{ path('ajouter_event') }}"><p>Ajout d'un événement</p></a>
+                                    <a href="{{ path('my_events') }}"><p>Mes événements</p></a>
+                                    <a href="{{ path('lister_event') }}"><p>Liste des événements</p></a>
                                 </div>
                             </div>
                             <div class="tab2">
                                 <ul class="place">
-                                    <li class="sort">Festive Needs</li>
-                                    <li class="by"><img src="images/do.png" alt=""></li>
+                                    <li class="sort"><img src="{{asset('images/activities.png')}}" alt=""></li>
+                                    <li class="by">Activités</li>
                                     <div class="clearfix"> </div>
                                 </ul>
                                 <div class="single-bottom">
-                                    <a href="#"><p>Lanterns</p></a>
-                                    <a href="#"><p>Disco Lights</p></a>
+                                    <a href="{{ path('ajouter_event') }}"><p>Ajout d'un événement</p></a>
+                                    <a href="{{ path('modifier_event') }}"><p>Modifier un événement</p></a>
+                                    <a href="{{ path('lister_event') }}"><p>Liste des événements</p></a>
                                 </div>
                             </div>
                             <div class="tab3">
                                 <ul class="place">
-                                    <li class="sort">Kitchen & Dining</li>
-                                    <li class="by"><img src="images/do.png" alt=""></li>
+                                    <li class="sort"><img src="{{asset('images/galleries.png')}}" alt=""></li>
+                                    <li class="by">Galleries</li>
                                     <div class="clearfix"> </div>
                                 </ul>
                                 <div class="single-bottom">
-                                    <a href="#"><p>Lights & Lamps</p></a>
+                                    <a href="{{ path('ajouter_event') }}"><p>Ajout d'un événement</p></a>
+                                    <a href="{{ path('modifier_event') }}"><p>Modifier un événement</p></a>
+                                    <a href="{{ path('lister_event') }}"><p>Liste des événements</p></a>
                                 </div>
                             </div>
                             <div class="tab4">
                                 <ul class="place">
-                                    <li class="sort">Books</li>
-                                    <li class="by"><img src="images/do.png" alt=""></li>
+                                    <li class="sort"><img src="{{asset('images/mes_reservations.png')}}" alt=""></li>
+                                    <li class="by">Mes réservations</li>
                                     <div class="clearfix"> </div>
                                 </ul>
                                 <div class="single-bottom">
-                                    <a href="#"><p>Standing Lamps</p></a>
-                                    <a href="#"><p>Lamps</p></a>
-                                    <a href="#"><p>Led Lamps</p></a>
+                                    <a href="{{ path('ajouter_event') }}"><p>Ajout d'un événement</p></a>
+                                    <a href="{{ path('modifier_event') }}"><p>Modifier un événement</p></a>
+                                    <a href="{{ path('lister_event') }}"><p>Liste des événements</p></a>
                                 </div>
                             </div>
                             <div class="tab5">
                                 <ul class="place">
-                                    <li class="sort">Automotive</li>
-                                    <li class="by"><img src="images/do.png" alt=""></li>
+                                    <li class="sort"><img src="{{asset('images/events_home.png')}}" alt=""></li>
+                                    <li class="by">Evénements</li>
                                     <div class="clearfix"> </div>
                                 </ul>
                                 <div class="single-bottom">
-                                    <a href="#"><p>Car Lights</p></a>
-                                    <a href="#"><p>Stick Lights</p></a>
-                                    <a href="#"><p>Thread Lights</p></a>
+                                    <a href="{{ path('ajouter_event') }}"><p>Ajout d'un événement</p></a>
+                                    <a href="{{ path('modifier_event') }}"><p>Modifier un événement</p></a>
+                                    <a href="{{ path('lister_event') }}"><p>Liste des événements</p></a>
                                 </div>
                             </div>
 
@@ -121,32 +122,8 @@
                             <!-- script -->
                     </section>
                 </div>
-                <div class="col-md-6 span_2_of_3">
-                    <div class="contact-form">
-                        <form>
-                            <div>
-                                <span><label>NAME</label></span>
-                                <span><input name="userName" type="text" class="textbox"></span>
-                            </div>
-                            <div>
-                                <span><label>E-MAIL</label></span>
-                                <span><input name="userEmail" type="text" class="textbox"></span>
-                            </div>
-                            <div>
-                                <span><label>MOBILE</label></span>
-                                <span><input name="userPhone" type="text" class="textbox"></span>
-                            </div>
-                            <div>
-                                <span><label>SUBJECT</label></span>
-                                <span><textarea name="userMsg"> </textarea></span>
-                            </div>
-                            <div>
-                                <span><input type="submit" class="mybutton" value="Submit"></span>
-                            </div>
-                        </form>
-
-                    </div>
-                </div>
+                {% block eventBody %}
+                {% endblock %}
             </div>
         </div>
     </div>
