--- a/web/css/style.css
+++ b/web/css/style.css
@@ -891,7 +891,7 @@ ul.place li{
 	padding: 6px;
 }
 ul.place li {
-	color: #8c8c8c;
+	color: #ed645c;
 	text-decoration: none;
 	cursor: pointer;
 }
@@ -902,7 +902,8 @@ ul.place li.sort{
 	float:left;
 }
 ul.place li.by{
-	float:right;
+	float: none;
+	text-align:  center;
 }
 .single-bottom p{
 	font-size:0.9em;
