--- a/src/EventBundle/Resources/views/Event/ajoutevent.html.twig
+++ b/src/EventBundle/Resources/views/Event/ajoutevent.html.twig
@@ -1,29 +1,23 @@
 {% extends 'EventBundle:Event:events.html.twig' %}
 {% block eventBody %}
-<div class="col-md-6 span_2_of_3">
-    <div class="contact-form">
-        <form>
-            <div>
-                <span><label>NAME</label></span>
-                <span><input name="userName" type="text" class="textbox"></span>
-            </div>
-            <div>
-                <span><label>E-MAIL</label></span>
-                <span><input name="userEmail" type="text" class="textbox"></span>
-            </div>
-            <div>
-                <span><label>MOBILE</label></span>
-                <span><input name="userPhone" type="text" class="textbox"></span>
-            </div>
-            <div>
-                <span><label>SUBJECT</label></span>
-                <span><textarea name="userMsg"> </textarea></span>
-            </div>
-            <div>
-                <span><input type="submit" class="mybutton" value="Submit"></span>
-            </div>
-        </form>
+    <div class="col-md-6 span_2_of_3">
+        <div class="contact-form">
+            {%  form_theme form 'bootstrap_4_layout.html.twig' %}
+            {{ form_start(form) }}
+            {{ form_row(form.nom, { 'label': 'Titre' }) }}
+            {{ form_row(form.type, { 'label': 'Type' }) }}
+            {{ form_row(form.typeReservation, { 'label': 'Type de réservation' }) }}
+            {{ form_row(form.prix, { 'label': 'Prix' }) }}
+            {{ form_row(form.dateEvent, { 'label': 'Date' }) }}
+            {{ form_row(form.duree, { 'label': 'Durée' }) }}
+            {{ form_row(form.lieu, { 'label': 'Localisation' }) }}
+            {{ form_row(form.nombre, { 'label': 'Quota' }) }}
+            {{ form_row(form.description, { 'label': 'Description' }) }}
+            {{ form_row(form.afficheFile, { 'label': 'Affiche' }) }}
 
+
+            {{ form_end(form) }}
+
+        </div>
     </div>
-</div>
-{% endblock %}
+{%  endblock %}
