--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1333,7 +1333,7 @@ h3.ghj {
 	display:block;
 	font-size: 0.9em;
 	padding-bottom:5px;
-	color: #012231;
+	color: #d85364;
 	text-transform: uppercase;
 }
 .contact-form input[type="text"],.contact-form textarea{
