--- a/src/EventBundle/Resources/views/Event/events.html.twig
+++ b/src/EventBundle/Resources/views/Event/events.html.twig
@@ -116,6 +116,7 @@
                     </section>
                 </div>
                 {% block eventBody %}
+                   <img src="{{ image('eve.png').resize('10%') }}" />
                 {% endblock %}
             </div>
         </div>
