--- a/src/EventBundle/Resources/views/Event/listevents.html.twig
+++ b/src/EventBundle/Resources/views/Event/listevents.html.twig
@@ -1,3 +1,61 @@
 {% extends 'EventBundle:Event:events.html.twig' %}
+{% block stylesheets %}
+<link rel="stylesheet" href="{{asset ('event/css/jquery.dataTables.min.css')}}">
+{% endblock %}
 {% block eventBody %}
+    <div class="col-md-6 span_2_of_3">
+        <div class="table-responsive ">
+            <table id="myTable" class="table table-bordered table-condensed table-hover table-striped display responsive nowrap" >
+                <thead>
+                <tr>
+                    <th class="col-md-1 col-xs-1">{{ knp_pagination_sortable(pagination, 'Titre', 'e.nom') }}</th>
+                    <th class="col-md-1 col-xs-1">{{ knp_pagination_sortable(pagination, 'Type', 'e.type') }}</th>
+                    <th class="col-md-1 col-xs-1">{{ knp_pagination_sortable(pagination, 'Type Réservation', 'e.typeReservation') }}</th>
+                    <th class="col-md-1 col-xs-1">{% if pagination.isSorted('e.dateEvent') %} class="sorted"{% endif %}
+                        {{ knp_pagination_sortable(pagination, 'Reservation', 'e.dateEvent') }}</th>
+                    <th class="col-md-1 col-xs-1">{{ knp_pagination_sortable(pagination, 'Durée', 'e.duree') }}</th>
+                    <th class="col-md-1 col-xs-1">{{ knp_pagination_sortable(pagination, 'Localisation', 'e.lieu') }}</th>
+                    <th class="col-md-1 col-xs-1">{{ knp_pagination_sortable(pagination, 'Quota', 'e.nombre') }}</th>
+                    <th class="col-md-1 col-xs-1">Détails</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for event in pagination %}
+                    <tr scope="row" {% if loop.index is odd %}class="color"{% endif %}>
+                        <td><span class="glyphicon glyphicon-plus"></span> {{ event.nom }}</td>
+                        <td>{{ event.type }}</td>
+                        <td>{{ event.typeReservation }}</td>
+                        <td>{{ event.dateEvent|date('Y-m-d H:i:s') }}</td>
+                        <td>{{ event.duree }}</td>
+                        <td>{{ event.lieu }}</td>
+                        <td>{{ event.nombre }}</td>
+                        <td><a href="{{path('details_event',{'id' : event.id})
+                            }}" target="_blank"><span class="glyphicon glyphicon-plus"></span></a></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <script>
+        $(document).ready(function(){
+            $('#myTable').dataTable({
+                "processing": true,
+                "serverSide": true,
+                "ajax": "{{ path('lister_event') }}",
+                "sAjaxDataProp": "data",
+                "pageLength": 10,
+                "columns":[
+                    {"data": "nom"},
+                    {"data": "type"},
+                    {"data": "dateEvent"}
+                ]
+            });
+            document.getElementById('myTable').style.width = "100%";
+        });
+    </script>
 {%  endblock %}
+{%  block javascripts %}
+<script type="text/javascript" src="{{asset ('event/js/jquery.dataTables.min.js')}}"></script>
+<script type="text/javascript" src="{{asset ('event/js/dataTables.responsive.min.js')}}"></script>
+{% endblock %}
