--- a/src/EventBundle/Resources/views/Event/events.html.twig
+++ b/src/EventBundle/Resources/views/Event/events.html.twig
@@ -1,4 +1,19 @@
 {% extends '::default/Layout.html.twig' %}
+{% block stylesheets %}
+    <style>
+        .item img {
+            height: 450px !important;
+            width: 850px !important;
+        }
+
+        .carousel-inner h3 { color: #ed645c }
+        .carousel-inner p {
+            color: black;
+            text-align: center;
+        }
+
+    </style>
+{% endblock %}
 {% block body %}
     <div class="contact">
 
@@ -15,6 +30,7 @@
                 <li><a href="{{ path('homepage') }}">Home</a></li>
                 <li><a href="{{ path('event_homepage') }}">Evénements</a></li>
                 <li class="active">{% block home %}
+                        {{ tag }}
                     {% endblock %}</li>
             </ol>
             <!--start contact-->
@@ -114,9 +130,62 @@
                             </script>
                             <!-- script -->
                     </section>
+
                 </div>
+                {%  if events %}
+                <div class="col-md-6 span_2_of_3">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            {% for event in events %}
+                                <li data-target="#carousel" data-slide-to="{{ loop.index0 }}" {% if loop.index0 == 0 %} class="active" {% endif %}></li>
+                            {% endfor %}
+                        </ol>
+                        <div class="carousel-inner">
+                            {% for event in events %}
+                                <div {% if loop.index0 == 0 %} class="item active" {% else %} class="item" {% endif %}>
+                                    <a href="{{path('details_event',{'id' : event.id})}}">
+                                    <img class="img-responsive center-block" src="{{ asset ('affiches/'~ event.affiche)}}"/>
+                                    </a>
+                                    <div class="carousel-caption">
+                                        <h3 class="titre">{{ event.nom }}</h3>
+                                        <p class="desc">{{ event.description }}</p>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control left" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control right"  role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+                        {% endif %}
                 {% block eventBody %}
-                   <img src="{{ image('eve.png').resize('10%') }}" />
+                    <script>
+                        $(document).ready(function() {
+                            $("#myCarousel").carousel({
+                                interval: false,
+                            });
+                        });
+
+                    </script>
+                    <script>
+
+                        $(".left").click(function(){
+                            $("#myCarousel").carousel("prev");
+                        });
+                        $(".right").click(function(){
+                            $("#myCarousel").carousel("next");
+                        });
+                    </script>
+                {% endblock %}
+                {% block javascripts %}
+                    <script src="{{ asset ('event/js/carousel.js') }}"></script>
                 {% endblock %}
             </div>
         </div>
