--- a/web/css/style.css
+++ b/web/css/style.css
@@ -934,7 +934,7 @@ span.amount {
 .product-model h2,h2.top,.contact h3{
   font-size: 2.5em;
   font-family: 'Dosis-Bold';
-  color: #333;
+  color: #ed645c;
   text-align:center;
 }
 ul.dropdown-menu1 li a:hover{
