--- a/src/CovoiturageBundle/Resources/views/Covoiturage/Lister.html.twig
+++ b/src/CovoiturageBundle/Resources/views/Covoiturage/Lister.html.twig
@@ -152,10 +152,10 @@
                 </div>
         <div class="col-md-3">
             <input type="radio" name="iCheck" value="0">
-            <label>Annonces</label>
+            <label>Offres</label>
             <br>
             <input type="radio" name="iCheck" value="1">
-            <label>Offres</label>
+            <label>Demandes</label>
             <br>
             <input type="radio" name="iCheck"  value="2" checked>
             <label>Tous</label></div>
