--- a/src/EventBundle/Resources/views/Event/listevents.html.twig
+++ b/src/EventBundle/Resources/views/Event/listevents.html.twig
@@ -37,7 +37,7 @@
             $('#myTable').dataTable({
                 "processing": true,
                 "serverSide": true,
-                "ajax": "{{ path('data_datatable') }}",
+                "ajax": "{{ path('dataAll_datatable') }}",
                 "sAjaxDataProp": "data",
                 "pageLength": 5,
                 "columns":[
