--- a/src/EventBundle/Resources/views/Event/myres.html.twig
+++ b/src/EventBundle/Resources/views/Event/myres.html.twig
@@ -1,15 +1,15 @@
 {% extends 'EventBundle:Event:events.html.twig' %}
 {% block stylesheets %}
-<link rel="stylesheet" href="{{asset ('event/css/jquery.dataTables.min.css')}}">
-<style>
-    .aff {
-        height: 45px !important;
-        width: 85px !important;
-    }
-    .table {
-        width: 100% !important;
-    }
-</style>
+    <link rel="stylesheet" href="{{asset ('event/css/jquery.dataTables.min.css')}}">
+    <style>
+        .aff {
+            height: 45px !important;
+            width: 85px !important;
+        }
+        .table {
+            width: 100% !important;
+        }
+    </style>
 {% endblock %}
 {% block eventBody %}
     <div class="col-md-6 span_2_of_3">
@@ -18,6 +18,7 @@
                 <thead>
                 <tr>
                     <th class="col-md-1 col-xs-1"> Titre </th>
+                    <th class="col-md-1 col-xs-1"> Etat de réservation </th>
                     <th class="col-md-1 col-xs-1"> Type</th>
                     <th class="col-md-1 col-xs-1"> Type de réservation</th>
                     <th class="col-md-1 col-xs-1"> Prix</th>
@@ -29,8 +30,8 @@
                     <th class="col-md-1 col-xs-1"> Affiche</th>
                     <th class="col-md-1 col-xs-1"> Détails</th>
                     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                        <th class="col-md-1 col-xs-1"> Modifier</th>
-                        <th class="col-md-1 col-xs-1"> Supprimer</th>
+                        <th class="col-md-1 col-xs-1"> Action </th>
+
                     {% endif %}
 
             </table>
@@ -41,11 +42,12 @@
             $('#myTable').dataTable({
                 "processing": true,
                 "serverSide": true,
-                "ajax": "{{ path('data_datatable') }}",
+                "ajax": "{{ path('dataRes_datatable') }}",
                 "sAjaxDataProp": "data",
                 "pageLength": 5,
                 "columns":[
                     {"data": "nom"},
+                    {"data": "etat"},
                     {"data": "type"},
                     {"data": "typeRes"},
                     {"data": "prix"},
@@ -56,8 +58,7 @@
                     {"data": "Description"},
                     {"data": "Affiche"},
                     {"data" : "Details"},
-                    {"data" : "Modifier"},
-                    {"data" : "Supprimer"}
+                    {"data" : "Action"},
                 ],
                 "retrieve": true
             });
